--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2>Escuela de Química</h2>
 
      <!--Imagenes de la UES-->
-    <img src="/Paginaweb_UES/imagenes_UES/Quimica.png" alt="Campus-central">
+    <img src="imagenes_UES/Quimica.png" alt="Campus-central">
 
     <p>
         La Escuela de Química de la UES forma profesionales con un enfoque integral en investigación,
