--- a/formulario_UES.html
+++ b/formulario_UES.html
@@ -44,7 +44,7 @@
     </form>
 
     <div class="enlace-formu" >
-    <a  href="/Paginaweb_UES/index.html">Regresar a la <br>pagina principal</a>
+    <a  href="index.html">Regresar a la <br>pagina principal</a>
     </div>
 
    
