--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <!--Enlace al formulario-->
     
-    <a class="enlace_form" href="/Paginaweb_UES/formulario_UES.html">Formulario</a>
+    <a class="enlace_form" href="formulario_UES.html">Formulario</a>
     </div>
 
 
