--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
      <div class="card">
     <h2>Escuela de Biologia</h2>
      <!--Imagenes de la UES-->
-    <img src="/Paginaweb_UES/imagenes_UES/Biologia.png" alt="Campus-central">
+    <img src="imagenes_UES/Biologia.png" alt="Campus-central">
 
     <p>
         La Escuela de Biología 
@@ -90,7 +90,7 @@
      <div class="card">
     <h2>Escuela de Física</h2>
      <!--Imagenes de la UES-->
-    <img src="/Paginaweb_UES/imagenes_UES/Fisica.png" alt="Campus-central">
+    <img src="imagenes_UES/Fisica.png" alt="Campus-central">
 
     <p>
         La Escuela de Física de la UES forma profesionales en física teórica, geofísica y experimental, 
@@ -108,7 +108,7 @@
      <div class="card">
     <h2>Escuela de Matemática</h2>
      <!--Imagenes de la UES-->
-    <img src="/Paginaweb_UES/imagenes_UES/matematica.jpg" alt="Campus-central">
+    <img src="imagenes_UES/matematica.jpg" alt="Campus-central">
 
     <p>
      La Escuela de Matemática de la UES forma profesionales en matemática pura, estadística y didáctica, con enfoque en investigación y aplicación
